<resources>
    <string name="app_name">AuthorPoint</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="title_activity_home">home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home2">home2</string>
    <string name="title_activity_home_page">Home_page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1909541186041817</string>
    <string name="fb_login_protocol_scheme">fb1909541186041817</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="mobilenumber">Mobile Number:</string>
    <string name="type_message_here">Type message here</string>
    <string name="todo">TODO</string>
    <string name="decline_friend_request">Decline Friend request</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="textview">TextView</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="events">Events</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="android_studio">Android Studio</string>
    <string name="mobile_no">mobile no</string>
    <string name="submit">submit</string>
    <string name="verify">verify</string>
    <string name="otp">otp</string>
    <string name="reset">Reset</string>
    <string name="login_as_reader">Login As Reader</string>
    <string name="login_as_author">Login As Author</string>
    <string name="forgot_password">forgot password</string>
    <string name="login">Login</string>
    <string name="language">Language</string>
    <string name="publication">Publication</string>
    <string name="isbn_no">ISBN No.</string>
    <string name="book_type">Book Type</string>
    <string name="buy_book">Buy Book</string>
    <string name="read_book">Read Book</string>
    <string name="description">Description</string>
    <string name="about_this_item">About this Item</string>
    <string name="long_text">long text .....................</string>


    <string name="chetan_bhagat">Chetan Bhagat</string>
    <string name="authorpoint">AuthorPoint</string>
    <string name="book_name">Book Name</string>
    <string name="book_language">Book Language</string>
    <string name="price">Price</string>
    <string name="book_image">Book Image</string>
    <string name="upload_book">Upload Book</string>
    <string name="select_pdf">Select Pdf</string>
    <string name="isbn_10">ISBN-10</string>

    <!--this filed are enter for render problem solve for xml-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!---->
</resources>
