<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/book_description_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/halfgirl" />

        <TextView
            android:id="@+id/book_description_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/book_description_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/book_description_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4"
                android:scaleX=".5"
                android:scaleY=".5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_description_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/textview" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_this_item"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_marginTop="14dp"
                android:padding="10dp"/>
            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/readmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/long_text"
                app:layout_constraintTop_toBottomOf="@+id/actTiming"
                app:trimCollapsedText="Read less"
                app:trimExpandedText="Read more"
                app:trimLength="50"
                app:trimMode="trimModeLength" />


            <TextView
                android:id="@+id/book_description_isbn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="05dp"
                android:padding="10dp"
                android:text="@string/isbn_no"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_descrpiton_publication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="05dp"
                android:padding="08dp"
                android:text="@string/publication"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_description_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="05dp"
                android:padding="10dp"
                android:text="@string/book_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_description_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/language"
                android:textSize="16sp"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/first_layout_make_invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:background="?android:attr/dividerHorizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/book_description_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimaryDark"
                android:text="@string/read_book" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/buy_book" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>











