<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="26dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_name"
            android:layout_below="@+id/book_upload_name"
            android:layout_marginTop="22dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_type"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_type"
            android:layout_below="@+id/book_upload_type"
            android:layout_marginTop="21dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_language" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_language"
            android:layout_below="@+id/book_upload_language"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_price"
            android:layout_below="@+id/book_upload_price"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="19dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/book_image" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/book_upload_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_upload_publication"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/upload_book" />

        <ImageView
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/book_upload_image"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@android:drawable/ic_menu_upload" android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_select_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_image"
            android:layout_below="@+id/book_upload_image"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/select_pdf" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_ISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_image"
            android:layout_below="@+id/book_upload_select_pdf"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isbn_10"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_image"
            android:layout_below="@+id/book_upload_ISBN"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_upload_publication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/book_upload_image"
            android:layout_below="@+id/book_upload_description"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publication"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/upload_pdf_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/upload_image_button"
            android:layout_alignTop="@+id/book_upload_select_pdf"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/ic_menu_upload"
            android:contentDescription="@string/todo" />

        <ProgressBar
            android:id="@+id/progressBar_book_upload"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_above="@+id/upload_image_button"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>